test_files/bad/bad_request_2.ru
def A "xfg sr" "fsd "
def S "sd" "dewd"

?A&S